--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>Blogz by Shane Bowen</title>
         <style>
             .error {
                 color: red;
@@ -24,11 +24,15 @@
     {% endblock %}
 
     <div>
+        <button type="button"><a href='/'>Home</a></button>
+
         <button type="button"><a href='/blog'>View All Blog Posts</a></button>
     
         <button type="button"><a href='/newpost'>Write A New Blog Post</a></button>
     
         <button type="button"><a href='/logout'>Log Out</a></button>
+
+        
     </div>
 
 </body>
