--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Blogz by Shane Bowen</title>
-        <style>
-            .error {
-                color: red;
-            }
-        </style>
-    </head>
-<body bgcolor="#ADD8E6">
+<head>
+    <title>Blogz by Shane Bowen</title>
+    <link href="styles.css" type="text/css" rel="stylesheet">
+</head>
+
+    <body>
 
     
 
