--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Log in to Build-a-Blog!</h1>
+<h2>Log in to Blogz!</h2>
 <p>If you don't have an account, you may <a href="/register">register</a> for one</p>
 <form action="/login" method="post">
     <table>
