--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -2,7 +2,7 @@
 
 {% block content %}    
     
-    <h1>Build-A-Blog</h1>
+    
     <h2>Write a new blog post!</h2>
     <!--  form action needs to match the url you want it to go to after submit -->
     <form method='POST'>
@@ -11,7 +11,7 @@
         </label>
         <p class="error">{{username_error}} &nbsp;</p>
         <label><span class="form_label">Body</span>
-            <input name="password" type="text" value='{{password}}' />
+            <input style="height:200px; width:500px;" name="password" type="text" value='{{password}}' />
         </label>
         <p class="error">{{password_error}} &nbsp;</p>
         
