--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register to Build-a-Blog!</h1>
+<h1>Register to Blogz!</h1>
 <form action="/register" method="post">
     <table>
         <tr>
